--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,3 +1,30 @@
 .p {
-  width: 300px;
+  width: 30%;
+  height: 40vh;
+  margin: 20px 10px;
+  border: 2px solid rgb(226, 226, 226);
+  border-radius: 10px 10px 0px 0px;
+  overflow: hidden;
+}
+.pBrowser {
+  height: 20px;
+  background-color: rgb(226, 226, 226);
+  display: flex;
+  align-items: center;
+  position: sticky;
+  z-index: 2;
+}
+.pCircle {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%; 
+  background-color: #fff;
+  margin: 3px;
+}
+.pImg {
+  width: 100%;
+  transition: all 10s ease;
+}
+.p:hover .pImg {
+  transform: translateY(-75%);
 }
