added emailJs functionality to contact component

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -67,3 +67,13 @@ button {
   font-weight: 500;
   cursor: pointer;
 }
+.cSuccessMessage {
+  font-weight: 400;
+  color: #59b256;
+  margin: 20px 0px 0px 0px;
+}
+.cFailMessage {
+  font-weight: 400;
+  color: red;
+  margin: 20px 0px 0px 0px;
+}
