--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -77,3 +77,38 @@ button {
   color: red;
   margin: 20px 0px 0px 0px;
 }
+
+@media only screen and (max-width: 480px) {
+  .cWrapper {
+    flex-direction: column;
+    padding: 0px 50px;
+  }
+  .cTitle {
+    font-size: 30px;
+    margin-top: 20px;
+  }
+  .cInfoItem {
+    margin: 20px 20px;
+  }
+  .cDesc {
+    display: none;
+  }
+  form {
+    margin-top: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  input {
+    width: 35%;
+    height: 40px;
+    margin: 10px;
+    margin-left: 0;
+  }
+  .c {
+    height: 100%;
+    padding-bottom: 50px;
+  }
+  button {
+    margin-top: 10px;
+  }
+}
