--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -71,3 +71,20 @@
   top: 0;
   right: 0;
 }
+
+@media only screen and (max-width: 480px) {
+  .i {
+    flex-direction: column;
+    
+  }
+  .iLeftWrapper {
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+  }
+  .iDesc {
+    display: none;
+  }
+}
