--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -17,7 +17,7 @@
 .pCircle {
   width: 6px;
   height: 6px;
-  border-radius: 50%; 
+  border-radius: 50%;
   background-color: #fff;
   margin: 3px;
 }
@@ -27,4 +27,11 @@
 }
 .p:hover .pImg {
   transform: translateY(-75%);
+}
+
+@media only screen and (max-width: 480px) {
+  .p {
+    width: 40%;
+    height: 40vh;
+  }
 }
