--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -21,3 +21,15 @@
   justify-content: space-between;
   width: 100%;
 }
+
+@media only screen and (max-width: 480px) {
+  .pl {
+    padding: 10px;
+  }
+  .plTexts {
+    width: 100%;
+  }
+  .plDesc {
+    display: none;
+  }
+}
